# base-repo-structure

./: README.md  SETUP.md
backend/: pyproject.toml
backend/src/app/: main.py
frontend/: App.tsx
